# air-quality-prediction-project

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
airflow/: .airflowignore  Dockerfile  requirements.common.txt  requirements.dev.txt  util.py
airflow/dags/: air_quality_to_mysql.py  wind_info_to_mysql.py
airflow/infra/: db.py
airflow/project/: constant.py  util.py
airflow/project/dtos/: air_quality.py  wind_info.py
airflow/project/entities/: air_quality.py  wind_info.py
airflow/project/infra/: db.py
airflow/project/repositories/: air_quality.py  wind_info.py
airflow/project/services/: air_quality.py  wind_info.py
airflow/repositories/: air_quality.py
airflow/services/: air_quality.py
airflow_project/: Dockerfile  docker-compose.yaml  util.py
airflow_project/dags/: air_quality_to_mysql.py  wind_info_to_mysql.py
airflow_project/dtos/: air_quality.py  wind_info.py
airflow_project/entities/: air_quality.py  wind_info.py
airflow_project/infra/: db.py
airflow_project/repositories/: air_quality.py  wind_info.py
airflow_project/services/: air_quality.py  wind_info.py
secret/: airflow.json
