[tool.poetry]
name = "air-quality-prediction-project"
version = "0.1.0"
description = ""
authors = ["nearKim <garfield@toss.im>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
apache-airflow = "^2.3.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
click = "8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
